argocd/network-policy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-default-deny-all-traffic
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
